Refactor notebook: Updated markdown headings and added new sections for data testing and Renko charts

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -581,7 +581,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PSAR Calculation"
+    "# Exploratory Data Analysis\n",
+    "To make sure that the PSAR and Impulse are correctly duplicated from Pinescript to python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PSAR Calculation"
    ]
   },
   {
@@ -771,7 +779,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Impulse MACD Calculation"
+    "## Impulse MACD Calculation"
    ]
   },
   {
@@ -1468,7 +1476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotting"
+    "## Plotting"
    ]
   },
   {
@@ -1506,7 +1514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Renko Charts"
+    "## Renko Charts"
    ]
   },
   {
@@ -1564,7 +1572,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Order Execution"
+    "# Testing Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 15-min aggregation"
    ]
   },
   {
@@ -1573,6 +1588,40 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Renko charts (from 1 min data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a renko chart from the ohlc_dec_1 dataframe\n",
+    "r = Renko(ohlc, brick_size=0.0003)\n",
+    "# create a new dataframe from the renko features\n",
+    "renko_df_ready = r.renko_df()\n",
+    "renko_high = np.array(renko_df_ready['high'])\n",
+    "renko_low = np.array(renko_df_ready['low'])\n",
+    "renko_close = np.array(renko_df_ready['close'])\n",
+    "# recalculate psar for the renko chart\n",
+    "psar_renko = np.empty_like(renko_high)\n",
+    "for i in range(len(renko_high)):\n",
+    "   psar_renko[i] = psar_obj.calcPSAR(renko_high[i], renko_low[i])\n",
+    "# Create DataFrame\n",
+    "df_psar_renko = pd.DataFrame({\n",
+    "   'Close': renko_close,\n",
+    "   'PSAR': psar_renko,\n",
+    "})\n",
+    "# add a new column to the dataframe that is 'red' if the psar is above the close and 'green' if the psar is below the close\n",
+    "df_psar_renko['Signal'] = np.where(df_psar_renko['PSAR'] > df_psar_renko['Close'], 'short', 'buy')\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
