Add PSAR and Impulse MACD CD Signal to Renko chart

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -1603,25 +1603,47 @@
    "outputs": [],
    "source": [
     "# create a renko chart from the ohlc_dec_1 dataframe\n",
-    "r = Renko(ohlc, brick_size=0.0003)\n",
+    "r_full = Renko(ohlc, brick_size=0.0003)\n",
     "# create a new dataframe from the renko features\n",
-    "renko_df_ready = r.renko_df()\n",
-    "renko_high = np.array(renko_df_ready['high'])\n",
-    "renko_low = np.array(renko_df_ready['low'])\n",
-    "renko_close = np.array(renko_df_ready['close'])\n",
+    "renko_full_data = r_full.renko_df()\n",
+    "renko_high_full = np.array(renko_full_data['high'])\n",
+    "renko_low_full = np.array(renko_full_data['low'])\n",
+    "renko_close_full = np.array(renko_full_data['close'])\n",
     "# recalculate psar for the renko chart\n",
-    "psar_renko = np.empty_like(renko_high)\n",
-    "for i in range(len(renko_high)):\n",
-    "   psar_renko[i] = psar_obj.calcPSAR(renko_high[i], renko_low[i])\n",
-    "# Create DataFrame\n",
-    "df_psar_renko = pd.DataFrame({\n",
-    "   'Close': renko_close,\n",
-    "   'PSAR': psar_renko,\n",
-    "})\n",
-    "# add a new column to the dataframe that is 'red' if the psar is above the close and 'green' if the psar is below the close\n",
-    "df_psar_renko['Signal'] = np.where(df_psar_renko['PSAR'] > df_psar_renko['Close'], 'short', 'buy')\n",
+    "for i in range(len(renko_high_full)):\n",
+    "   renko_full_data['psar'] = psar_obj.calcPSAR(renko_high_full[i], renko_low_full[i])\n",
+    "\n",
+    "# add a new column to the dataframe that is 'short' if the psar is above the close and 'buy' if the psar is below the close - This is the entry signal from PSAR\n",
+    "renko_full_data['psar_signal'] = np.where(renko_full_data['psar'] > renko_full_data['Close'], 'short', 'buy')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the Impulse MACD CD Signal to the renko_full_data dataframe\n",
+    "renko_full_data = calc_impulse_macd(renko_full_data)\n",
+    "\n",
+    "# find crossover points of sh and sb by seeing when the sign of 'md' goes from being > 0 to < 0, or vice versa but don't include 0\n",
+    "renko_full_data['md_sign'] = np.sign(renko_full_data['md'])\n",
+    "\n",
+    "# crossover would be when 'md_sign' == 1 or -1 and the previous value of 'md_sign' was 0 or -1 or 1 respectively\n",
+    "renko_full_data['crossover'] = np.where((renko_full_data['md_sign'] == 1) & ((renko_full_data['md_sign'].shift(1) == 0) | (renko_full_data['md_sign'].shift(1) == -1)), 1, \n",
+    "                                np.where((renko_full_data['md_sign'] == -1) & ((renko_full_data['md_sign'].shift(1) == 0) | (renko_full_data['md_sign'].shift(1) == 1)), -1, 0))\n",
+    "\n",
+    "# indicate the trade signal for Impulse\n",
+    "renko_full_data['impulse_signal'] = np.where(renko_full_data['md_sign'] == 1, 'buy', np.where(renko_full_data['md_sign'] == -1, 'short', 'none'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
