Add variables and entry conditions for Renko chart strategy

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -1602,8 +1602,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Renko variable\n",
+    "brick_size = 0.0003\n",
+    "\n",
+    "# psar variables\n",
+    "start = 0.02\n",
+    "increment = 0.02\n",
+    "maximum = 0.2\n",
+    "\n",
+    "# impulse variables\n",
+    "lengthMA = 34\n",
+    "lengthSignal = 9\n",
+    "\n",
+    "# Lot Size\n",
+    "lot_size = 2\n",
+    "per_lot = 100000\n",
+    "\n",
+    "# Commissions\n",
+    "nova_commission = lot_size * -3\n",
+    "msolutions_commission = lot_size * -5\n",
+    "\n",
+    "# starting balance\n",
+    "balance = 200000\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# create a renko chart from the ohlc_dec_1 dataframe\n",
-    "r_full = Renko(ohlc, brick_size=0.0003)\n",
+    "r_full = Renko(ohlc, brick_size=brick_size)\n",
     "# create a new dataframe from the renko features\n",
     "renko_full_data = r_full.renko_df()\n",
     "renko_high_full = np.array(renko_full_data['high'])\n",
@@ -1639,11 +1669,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Entry conditions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# add a column that will be the entry signal for the strategy to be when both impulse_signal and psar_signal are both 'buy' or 'short'\n",
+    "renko_full_data['entry_signal'] = np.where((renko_full_data['psar_signal'] == 'buy') & (renko_full_data['impulse_signal'] == 'buy'), 'buy', \n",
+    "                                        np.where((renko_full_data['psar_signal'] == 'short') & (renko_full_data['impulse_signal'] == 'short'), 'short', 'none'))\n",
+    "\n",
+    "# add a stop loss column that will be the entry price +/- the brick size\n",
+    "renko_full_data['stop_loss'] = np.where(renko_full_data['entry_signal'] == 'buy', renko_full_data['Close'] - brick_size, \n",
+    "                                    np.where(renko_full_data['entry_signal'] == 'short', renko_full_data['Close'] + brick_size, 0))\n",
+    "\n",
+    "# add a column to renko_full_data that will indicate the color of the renko brick based on the \"open\" and \"close\" columns of the renko_full_data dataframe, if the open is greater than the close then the color is red, otherwise it is green\n",
+    "renko_full_data['color'] = np.where(renko_full_data['open'] > renko_full_data['close'], 'red', 'green')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if the color column changes from red to green or green to red then that is a reversal and 'exit' should be placed in the entry_signal column\n",
+    "renko_full_data['entry_signal'] = np.where((renko_full_data['color'] != renko_full_data['color'].shift(1)) & (renko_full_data['entry_signal'] != 'none'), 'exit', renko_full_data['entry_signal'])"
+   ]
   }
  ],
  "metadata": {
