adjusted the first occurrence of entering a trade to be 'entry + buy/sell' depending on the position

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -1669,6 +1669,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add a column to renko_full_data that will indicate the color of the renko brick based on the \"open\" and \"close\" columns of the renko_full_data dataframe, \n",
+    "# if the open is greater than the close then the color is red, otherwise it is green\n",
+    "renko_full_data['color'] = np.where(renko_full_data['open'] > renko_full_data['close'], 'red', 'green')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1682,16 +1693,16 @@
    "outputs": [],
    "source": [
     "# add a column that will be the entry signal for the strategy to be when both impulse_signal and psar_signal are both 'buy' or 'short'\n",
-    "renko_full_data['entry_signal'] = np.where((renko_full_data['psar_signal'] == 'buy') & (renko_full_data['impulse_signal'] == 'buy'), 'buy', \n",
-    "                                        np.where((renko_full_data['psar_signal'] == 'short') & (renko_full_data['impulse_signal'] == 'short'), 'short', 'none'))\n",
+    "renko_full_data['entry_signal'] = np.where((renko_full_data['psar_signal'] == 'buy') & (renko_full_data['impulse_signal'] == 'buy') & (renko_full_data['color'] == 'green'), 'buy', \n",
+    "                                        np.where((renko_full_data['psar_signal'] == 'short') & (renko_full_data['impulse_signal'] == 'short') & (renko_full_data['color'] == 'red'), 'short', 'none'))\n",
+    "\n",
+    "# if there was a change from 'none' to 'buy' or 'short' then that is an entry signal and replace the 'buy' or 'short' with 'entry + buy' or 'entry + short'\n",
+    "renko_full_data['entry_signal'] = np.where((renko_full_data['entry_signal'] != 'none') & (renko_full_data['entry_signal'].shift(1) == 'none'),\n",
+    "                                            'entry + ' + renko_full_data['entry_signal'], renko_full_data['entry_signal'])\n",
     "\n",
     "# add a stop loss column that will be the entry price +/- the brick size\n",
     "renko_full_data['stop_loss'] = np.where(renko_full_data['entry_signal'] == 'buy', renko_full_data['Close'] - brick_size, \n",
-    "                                    np.where(renko_full_data['entry_signal'] == 'short', renko_full_data['Close'] + brick_size, 0))\n",
-    "\n",
-    "# add a column to renko_full_data that will indicate the color of the renko brick based on the \"open\" and \"close\" columns of the renko_full_data dataframe, if the open is greater than the close then the color is red, otherwise it is green\n",
-    "renko_full_data['color'] = np.where(renko_full_data['open'] > renko_full_data['close'], 'red', 'green')\n",
-    "\n"
+    "                                    np.where(renko_full_data['entry_signal'] == 'short', renko_full_data['Close'] + brick_size, 0))"
    ]
   },
   {
@@ -1702,6 +1713,15 @@
    "source": [
     "# if the color column changes from red to green or green to red then that is a reversal and 'exit' should be placed in the entry_signal column\n",
     "renko_full_data['entry_signal'] = np.where((renko_full_data['color'] != renko_full_data['color'].shift(1)) & (renko_full_data['entry_signal'] != 'none'), 'exit', renko_full_data['entry_signal'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a take profit"
    ]
   }
  ],
