fixed bug on calculation of PSAR

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %pip install yfinance\n",
     "# %pip install matplotlib\n",
     "# %pip install mplfinance\n",
-    "# %pip install renkodf"
+    "# %pip install renkodf\n",
+    "# %pip install commitizen"
    ]
   },
   {
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +312,7 @@
        "9 2023-01-01 17:15:00  1.06788  1.06788  1.06788  1.06788       0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +375,7 @@
        "318316 2023-12-26 16:44:00  1.10414  1.10414  1.10409  1.10409"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +409,7 @@
        "Index(['datetime', 'open', 'high', 'low', 'close'], dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +558,7 @@
        "[96 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +767,7 @@
        "[96 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1059,7 @@
        "[96 rows x 11 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1236,7 @@
        "2023-12-04 09:00:00         -1  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1422,7 @@
        "2023-12-04 09:30:00          0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,9 +1629,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>nbars</th>\n",
+       "      <th>psar</th>\n",
+       "      <th>psar_signal</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 14:00:00</th>\n",
+       "      <td>1.1055</td>\n",
+       "      <td>1.10597</td>\n",
+       "      <td>1.10520</td>\n",
+       "      <td>1.1052</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>1.106517</td>\n",
+       "      <td>short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 14:05:00</th>\n",
+       "      <td>1.1052</td>\n",
+       "      <td>1.10520</td>\n",
+       "      <td>1.10490</td>\n",
+       "      <td>1.1049</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.106455</td>\n",
+       "      <td>short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 14:12:00</th>\n",
+       "      <td>1.1049</td>\n",
+       "      <td>1.10490</td>\n",
+       "      <td>1.10460</td>\n",
+       "      <td>1.1046</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.106361</td>\n",
+       "      <td>short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 14:23:00</th>\n",
+       "      <td>1.1046</td>\n",
+       "      <td>1.10468</td>\n",
+       "      <td>1.10430</td>\n",
+       "      <td>1.1043</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.106220</td>\n",
+       "      <td>short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 14:33:00</th>\n",
+       "      <td>1.1043</td>\n",
+       "      <td>1.10441</td>\n",
+       "      <td>1.10400</td>\n",
+       "      <td>1.1040</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1.106028</td>\n",
+       "      <td>short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 15:08:00</th>\n",
+       "      <td>1.1043</td>\n",
+       "      <td>1.10460</td>\n",
+       "      <td>1.10383</td>\n",
+       "      <td>1.1046</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>1.105785</td>\n",
+       "      <td>short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 15:09:00</th>\n",
+       "      <td>1.1046</td>\n",
+       "      <td>1.10490</td>\n",
+       "      <td>1.10460</td>\n",
+       "      <td>1.1049</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.105511</td>\n",
+       "      <td>short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 15:46:00</th>\n",
+       "      <td>1.1046</td>\n",
+       "      <td>1.10505</td>\n",
+       "      <td>1.10430</td>\n",
+       "      <td>1.1043</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1.105276</td>\n",
+       "      <td>short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 15:54:00</th>\n",
+       "      <td>1.1043</td>\n",
+       "      <td>1.10430</td>\n",
+       "      <td>1.10400</td>\n",
+       "      <td>1.1040</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.105073</td>\n",
+       "      <td>short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29 16:09:00</th>\n",
+       "      <td>1.1040</td>\n",
+       "      <td>1.10409</td>\n",
+       "      <td>1.10370</td>\n",
+       "      <td>1.1037</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>1.105050</td>\n",
+       "      <td>short</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       open     high      low   close  nbars      psar  \\\n",
+       "datetime                                                                 \n",
+       "2023-12-29 14:00:00  1.1055  1.10597  1.10520  1.1052   19.0  1.106517   \n",
+       "2023-12-29 14:05:00  1.1052  1.10520  1.10490  1.1049    6.0  1.106455   \n",
+       "2023-12-29 14:12:00  1.1049  1.10490  1.10460  1.1046    8.0  1.106361   \n",
+       "2023-12-29 14:23:00  1.1046  1.10468  1.10430  1.1043   12.0  1.106220   \n",
+       "2023-12-29 14:33:00  1.1043  1.10441  1.10400  1.1040   11.0  1.106028   \n",
+       "2023-12-29 15:08:00  1.1043  1.10460  1.10383  1.1046   36.0  1.105785   \n",
+       "2023-12-29 15:09:00  1.1046  1.10490  1.10460  1.1049    2.0  1.105511   \n",
+       "2023-12-29 15:46:00  1.1046  1.10505  1.10430  1.1043   38.0  1.105276   \n",
+       "2023-12-29 15:54:00  1.1043  1.10430  1.10400  1.1040    9.0  1.105073   \n",
+       "2023-12-29 16:09:00  1.1040  1.10409  1.10370  1.1037   16.0  1.105050   \n",
+       "\n",
+       "                    psar_signal  \n",
+       "datetime                         \n",
+       "2023-12-29 14:00:00       short  \n",
+       "2023-12-29 14:05:00       short  \n",
+       "2023-12-29 14:12:00       short  \n",
+       "2023-12-29 14:23:00       short  \n",
+       "2023-12-29 14:33:00       short  \n",
+       "2023-12-29 15:08:00       short  \n",
+       "2023-12-29 15:09:00       short  \n",
+       "2023-12-29 15:46:00       short  \n",
+       "2023-12-29 15:54:00       short  \n",
+       "2023-12-29 16:09:00       short  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create a renko chart from the ohlc_dec_1 dataframe\n",
     "r_full = Renko(ohlc, brick_size=brick_size)\n",
@@ -1639,13 +1818,22 @@
     "renko_high_full = np.array(renko_full_data['high'])\n",
     "renko_low_full = np.array(renko_full_data['low'])\n",
     "renko_close_full = np.array(renko_full_data['close'])\n",
+    "# generate a blank array for the psar_renko_full\n",
+    "psar_renko_full = np.empty_like(renko_high_full)\n",
     "# recalculate psar for the renko chart\n",
     "for i in range(len(renko_high_full)):\n",
-    "   renko_full_data['psar'] = psar_obj.calcPSAR(renko_high_full[i], renko_low_full[i])\n",
+    "   psar_renko_full[i] = psar_obj.calcPSAR(renko_high_full[i], renko_low_full[i])\n",
+    "\n",
+    "# append the psar_renko_full to the renko_full_data dataframe\n",
+    "renko_full_data['psar'] = psar_renko_full\n",
     "\n",
     "# add a new column to the dataframe that is 'short' if the psar is above the close and 'buy' if the psar is below the close - This is the entry signal from PSAR\n",
     "renko_full_data['psar_signal'] = np.where(renko_full_data['psar'] > renko_full_data['close'], 'short', 'buy')\n",
-    "\n"
+    "\n",
+    "# rename 'volume' to 'nbars'\n",
+    "renko_full_data = renko_full_data.rename(columns={'volume': 'nbars'})\n",
+    "\n",
+    "renko_full_data.tail(10)"
    ]
   },
   {
