changed color to brick_color

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -1837,6 +1837,7 @@
     "\n",
     "# add a new column to the dataframe that is 'short' if the psar is above the close and 'buy' if the psar is below the close - This is the entry signal from PSAR\n",
     "renko_full_data['psar_signal'] = np.where(renko_full_data['psar'] > renko_full_data['close'], 'short', 'buy')\n",
+    "renko_full_data['psar_color'] = np.where(renko_full_data['psar'] > renko_full_data['close'], 'red', 'green')\n",
     "\n",
     "# rename 'volume' to 'nbars'\n",
     "renko_full_data = renko_full_data.rename(columns={'volume': 'nbars'})\n",
@@ -2603,13 +2604,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "# add a column to renko_full_data that will indicate the color of the renko brick based on the \"open\" and \"close\" columns of the renko_full_data dataframe, \n",
     "# if the open is greater than the close then the color is red, otherwise it is green\n",
-    "renko_full_data['color'] = np.where(renko_full_data['open'] > renko_full_data['close'], 'red', 'green')"
+    "renko_full_data['brick_color'] = np.where(renko_full_data['open'] > renko_full_data['close'], 'red', 'green')"
    ]
   },
   {
@@ -2626,8 +2627,8 @@
    "outputs": [],
    "source": [
     "# add a column that will be the entry signal for the strategy to be when both impulse_signal and psar_signal are both 'buy' or 'short'\n",
-    "renko_full_data['entry_signal'] = np.where((renko_full_data['psar_signal'] == 'buy') & (renko_full_data['impulse_signal'] == 'buy') & (renko_full_data['color'] == 'green'), 'buy', \n",
-    "                                        np.where((renko_full_data['psar_signal'] == 'short') & (renko_full_data['impulse_signal'] == 'short') & (renko_full_data['color'] == 'red'), 'short', 'none'))\n",
+    "renko_full_data['entry_signal'] = np.where((renko_full_data['psar_signal'] == 'buy') & (renko_full_data['impulse_signal'] == 'buy') & (renko_full_data['brick_color'] == 'green'), 'buy', \n",
+    "                                        np.where((renko_full_data['psar_signal'] == 'short') & (renko_full_data['impulse_signal'] == 'short') & (renko_full_data['brick_color'] == 'red'), 'short', 'none'))\n",
     "\n",
     "# if there was a change from 'none' to 'buy' or 'short' then that is an entry signal and replace the 'buy' or 'short' with 'entry + buy' or 'entry + short'\n",
     "renko_full_data['entry_signal'] = np.where((renko_full_data['entry_signal'] != 'none') & (renko_full_data['entry_signal'].shift(1) == 'none'),\n",
@@ -2644,8 +2645,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if the color column changes from red to green or green to red then that is a reversal and 'exit' should be placed in the entry_signal column\n",
-    "renko_full_data['entry_signal'] = np.where((renko_full_data['color'] != renko_full_data['color'].shift(1)) & (renko_full_data['entry_signal'] != 'none'), 'exit', renko_full_data['entry_signal'])"
+    "# if the brick_color column changes from red to green or green to red then that is a reversal and 'exit' should be placed in the entry_signal column\n",
+    "renko_full_data['entry_signal'] = np.where((renko_full_data['brick_color'] != renko_full_data['brick_color'].shift(1)) \n",
+    "                                           & (renko_full_data['entry_signal'] != 'none'), 'exit', renko_full_data['entry_signal'])"
    ]
   },
   {
