testing entry conditions

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -2622,7 +2622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2643,7 +2643,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if the brick_color column changes from red to green or green to red then that is a reversal and 'exit' should be placed in the entry_signal column\n",
+    "renko_full_data['entry_signal'] = np.where((renko_full_data['brick_color'] != renko_full_data['brick_color'].shift(1)), 'exit', renko_full_data['entry_signal'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2809,7 +2819,7 @@
        "      <td>red</td>\n",
        "      <td>red</td>\n",
        "      <td>entry + short</td>\n",
-       "      <td>1.105650</td>\n",
+       "      <td>1.105975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 10:57:00</th>\n",
@@ -2833,7 +2843,7 @@
        "      <td>red</td>\n",
        "      <td>red</td>\n",
        "      <td>short</td>\n",
-       "      <td>1.105325</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 10:57:00</th>\n",
@@ -2857,7 +2867,7 @@
        "      <td>red</td>\n",
        "      <td>red</td>\n",
        "      <td>short</td>\n",
-       "      <td>1.105000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 10:57:00</th>\n",
@@ -2881,7 +2891,7 @@
        "      <td>red</td>\n",
        "      <td>red</td>\n",
        "      <td>short</td>\n",
-       "      <td>1.104675</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 11:07:00</th>\n",
@@ -2904,7 +2914,7 @@
        "      <td>short</td>\n",
        "      <td>green</td>\n",
        "      <td>green</td>\n",
-       "      <td>none</td>\n",
+       "      <td>exit</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3024,7 +3034,7 @@
        "      <td>buy</td>\n",
        "      <td>red</td>\n",
        "      <td>red</td>\n",
-       "      <td>none</td>\n",
+       "      <td>exit</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3096,8 +3106,8 @@
        "      <td>buy</td>\n",
        "      <td>green</td>\n",
        "      <td>green</td>\n",
-       "      <td>entry + buy</td>\n",
-       "      <td>1.105325</td>\n",
+       "      <td>exit</td>\n",
+       "      <td>1.105000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 14:05:00</th>\n",
@@ -3120,7 +3130,7 @@
        "      <td>buy</td>\n",
        "      <td>red</td>\n",
        "      <td>red</td>\n",
-       "      <td>none</td>\n",
+       "      <td>exit</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3145,7 +3155,7 @@
        "      <td>red</td>\n",
        "      <td>red</td>\n",
        "      <td>entry + short</td>\n",
-       "      <td>1.105000</td>\n",
+       "      <td>1.105325</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 14:22:00</th>\n",
@@ -3169,7 +3179,7 @@
        "      <td>red</td>\n",
        "      <td>red</td>\n",
        "      <td>short</td>\n",
-       "      <td>1.104675</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 14:33:00</th>\n",
@@ -3193,7 +3203,7 @@
        "      <td>red</td>\n",
        "      <td>red</td>\n",
        "      <td>short</td>\n",
-       "      <td>1.104350</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 15:08:00</th>\n",
@@ -3216,7 +3226,7 @@
        "      <td>short</td>\n",
        "      <td>green</td>\n",
        "      <td>green</td>\n",
-       "      <td>none</td>\n",
+       "      <td>exit</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3264,8 +3274,8 @@
        "      <td>short</td>\n",
        "      <td>red</td>\n",
        "      <td>red</td>\n",
-       "      <td>entry + short</td>\n",
-       "      <td>1.104675</td>\n",
+       "      <td>exit</td>\n",
+       "      <td>1.105000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 15:54:00</th>\n",
@@ -3289,7 +3299,7 @@
        "      <td>red</td>\n",
        "      <td>red</td>\n",
        "      <td>short</td>\n",
-       "      <td>1.104350</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-12-29 16:09:00</th>\n",
@@ -3313,7 +3323,7 @@
        "      <td>red</td>\n",
        "      <td>red</td>\n",
        "      <td>short</td>\n",
-       "      <td>1.104025</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3410,50 +3420,39 @@
        "2023-12-29 10:49:00    red         red           none  0.000000  \n",
        "2023-12-29 10:49:00    red         red           none  0.000000  \n",
        "2023-12-29 10:49:00    red         red           none  0.000000  \n",
-       "2023-12-29 10:53:00    red         red  entry + short  1.105650  \n",
-       "2023-12-29 10:57:00    red         red          short  1.105325  \n",
-       "2023-12-29 10:57:00    red         red          short  1.105000  \n",
-       "2023-12-29 10:57:00    red         red          short  1.104675  \n",
-       "2023-12-29 11:07:00  green       green           none  0.000000  \n",
+       "2023-12-29 10:53:00    red         red  entry + short  1.105975  \n",
+       "2023-12-29 10:57:00    red         red          short  0.000000  \n",
+       "2023-12-29 10:57:00    red         red          short  0.000000  \n",
+       "2023-12-29 10:57:00    red         red          short  0.000000  \n",
+       "2023-12-29 11:07:00  green       green           exit  0.000000  \n",
        "2023-12-29 11:09:00  green       green           none  0.000000  \n",
        "2023-12-29 11:11:00  green       green           none  0.000000  \n",
        "2023-12-29 11:51:00  green       green           none  0.000000  \n",
        "2023-12-29 12:45:00  green       green           none  0.000000  \n",
-       "2023-12-29 13:01:00    red         red           none  0.000000  \n",
+       "2023-12-29 13:01:00    red         red           exit  0.000000  \n",
        "2023-12-29 13:01:00    red         red           none  0.000000  \n",
        "2023-12-29 13:23:00    red         red           none  0.000000  \n",
-       "2023-12-29 13:42:00  green       green    entry + buy  1.105325  \n",
-       "2023-12-29 14:05:00    red         red           none  0.000000  \n",
-       "2023-12-29 14:07:00    red         red  entry + short  1.105000  \n",
-       "2023-12-29 14:22:00    red         red          short  1.104675  \n",
-       "2023-12-29 14:33:00    red         red          short  1.104350  \n",
-       "2023-12-29 15:08:00  green       green           none  0.000000  \n",
+       "2023-12-29 13:42:00  green       green           exit  1.105000  \n",
+       "2023-12-29 14:05:00    red         red           exit  0.000000  \n",
+       "2023-12-29 14:07:00    red         red  entry + short  1.105325  \n",
+       "2023-12-29 14:22:00    red         red          short  0.000000  \n",
+       "2023-12-29 14:33:00    red         red          short  0.000000  \n",
+       "2023-12-29 15:08:00  green       green           exit  0.000000  \n",
        "2023-12-29 15:16:00  green       green           none  0.000000  \n",
-       "2023-12-29 15:43:00    red         red  entry + short  1.104675  \n",
-       "2023-12-29 15:54:00    red         red          short  1.104350  \n",
-       "2023-12-29 16:09:00    red         red          short  1.104025  \n",
+       "2023-12-29 15:43:00    red         red           exit  1.105000  \n",
+       "2023-12-29 15:54:00    red         red          short  0.000000  \n",
+       "2023-12-29 16:09:00    red         red          short  0.000000  \n",
        "\n",
        "[25 rows x 22 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "renko_full_data.tail(25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# if the brick_color column changes from red to green or green to red then that is a reversal and 'exit' should be placed in the entry_signal column\n",
-    "renko_full_data['entry_signal'] = np.where((renko_full_data['brick_color'] != renko_full_data['brick_color'].shift(1)) \n",
-    "                                           & (renko_full_data['entry_signal'] != 'none'), 'exit', renko_full_data['entry_signal'])"
    ]
   },
   {
